<resources>
    <string name="app_name">Good Morning</string>
    <string name="tick">\u2713</string>
    <string name="createAlarm">Create Alarm</string>
    <string name="alarms">Alarms</string>
    <string name="alarmicon">alarmIcon</string>
    <string name="cancel">Cancel</string>
    <string name="okay">OKAY</string>
    <string name="weather_dialog_title">Enable Search</string>
    <string name="weather_dialog_message">Do you want to enable location search.</string>
    <string name="weather_dialog_title_toinvisible">Disable Search</string>
    <string name="weather_dialog_message_toinvisible">Do you want to disable location search.</string>
    <string name="next">NEXT</string>
    <string name="previous">PREVIOUS</string>
    <string name="login">LOGIN</string>
    <string name="name">Name</string>
    <string name="email">Email *</string>
    <string name="phonenumber">Phone Number *</string>
    <string name="country">Country *</string>
    <string name="password">Password *</string>
    <string name="register">Create Account</string>
    <string name="dark_theme">Dark Theme</string>
    <string name="dark_theme_request">Which theme you want to use?</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="light">Light</string>
    <string name="dark">Dark</string>
    <string name="info">Tell us something about you.</string>
    <string name="firstname">First Name *</string>
    <string name="lastname">Last Name *</string>
    <string name="image_upload_title">Uploading profile photo</string>
    <string name="image_upload_message">Hold on just uploading your picture</string>
    <string name="typeOfSleeper">Could you tell us what type of sleeper are you? So that we can recommend you an alarm.</string>
    <string name="proAtSleep">I am pro at sleep</string>
    <string name="wakeUpAtTimeRarely">I rarely wake up on time.</string>
    <string name="wakeUpAtTimeOften">I often wake up on time.</string>
    <string name="voiceSettings">Do you want voice settings?</string>
    <string name="voiceForBoth">I want voice for everything.</string>
    <string name="onlyWeather">I want voice only for weather.</string>
    <string name="login_screen">Hey, welcome back!</string>
    <string name="noVoice">I don\'t want voice settings.</string>
    <string name="noAccount">Don\'t have an account yet?\n\t\t\t\tCreate one here.</string>
    <string name="permission">Permission Request</string>
    <string name="permission_message">Kindly give us these permissions.</string>
    <string name="display_over_other_apps">Display Over Other Apps permission required for Android Version > 9</string>
    <string name="settingsHeading">Settings</string>
    <string name="profileHeading">My Profile</string>
    <string name="defaultVal">Default</string>
    <string name="alarm_clock">Alarm Clock</string>
    <string name="alarm_clock_old">Alarm Clock Old</string>
    <string name="off">Off</string>
    <string name="beeps">Beeps</string>
    <string name="siren">Siren</string>
    <string name="tuning">Tuning</string>
    <string name="gi1">Gradually Increasing 1</string>
    <string name="gi2">Gradually Increasing 2</string>
    <string name="gi3">Gradually Increasing 3</string>
    <string name="gi4">Gradually Increasing 4</string>
    <string name="gi5">Gradually Increasing 5</string>
    <string name="gi6">Gradually Increasing 6</string>
    <string name="la1">Loud Alarm 1</string>
    <string name="la2">Loud Alarm 2</string>
    <string name="la3">Loud Alarm 3</string>
    <string name="la4">Loud Alarm 4</string>
    <string name="la5">Loud Alarm 5</string>
    <string name="la6">Loud Alarm 6</string>
    <string name="la7">Loud Alarm 7</string>
    <string name="la8">Loud Alarm 8</string>
    <string name="la9">Loud Alarm 9</string>
    <string name="nil">Nil</string>
    <string name="snooze">SNOOZE</string>
    <string name="everyday">Everyday</string>
    <string name="weekdays">Weekdays</string>
    <string name="dataUnavailable">Sorry your account is not created properly, please write us at support@zerostic.com</string>
    <string name="dataUnavailableTitle">Account Error</string>
    <string name="tos">I agree to all the Terms of Zerostic</string>
    <string name="payments">Payments</string>
    <string name="paymenticon">payment icon</string>
    <string name="plans_offered">We offer two plans for subscription.</string>
    <string name="pay">Pay</string>
    <string name="rsplan1">\u20B9 11.99/month</string>
    <string name="rsplan2">\u20B9 119.90/year</string>
    <string name="usdplan1">$ 0.50/3 months</string>
    <string name="usdplan2">$ 1.64/year</string>
    <string name="select_difficulty_level">Select difficulty level</string>
    <string name="shake_intensity">Shake intensity</string>
    <string name="shake_count">How many times do you want to shake your device</string>
    <string name="add_code">Add A Bar Code</string>
    <string name="numOfSteps">Number of steps</string>
    <string name="patternType">Select a pattern type</string>
    <string name="napping">Napping</string>
    <string name="resetPassword">Forgot Password?</string>
    <string name="missing_data">Information Missing</string>
    <string name="confirmation">Confirmation</string>
    <string name="logout">Once you verify yourself you need to login again.</string>
    <string name="verifiedUser">Verified User</string>
    <string name="goodnight">Good Night</string>
    <string name="start">START</string>
    <string name="information">Information</string>
    <string name="trackerStart">Your tracker will start automatically in 7 minutes… \nSweet Dreams!!!</string>
    <string name="stop">STOP</string>
    <string name="trackerStarted">Tracker Started</string>
    <string name="trackerStop">Alright! I\'ll stop the timer.</string>
    <string name="deepsleep">Deep Sleep</string>
    <string name="moderatesleep">Moderate Sleep</string>
    <string name="lightsleep">Light Sleep</string>
    <string name="sleepTime">Sleep Time</string>
    <string name="totalSleepHour">Slept for</string>
    <string name="deleteConfirmation">Are you sure you want to delete Tracker data.</string>
    <string name="swipe"><![CDATA[Swipe >>]]></string>
    <string name="weather">Weather Settings</string>
    <string name="contactus">Contact Us</string>
    <string name="speech">Voice Settings</string>
    <string name="afterEveryAlarm">After every alarm.</string>
    <string name="iWantWeather">I want weather</string>
    <string name="onlyForMorningAlarms">Only for morning alarms.</string>
    <string name="never">Never</string>
    <string name="ZerosticEmail">support@zerostic.com</string>
    <string name="iWantSpeech">I want voice</string>
    <string name="atWakeUpCheck">At Wake Up Check</string>
    <string name="atWeather">At Weather</string>
    <string name="step1">Go to Settings</string>
    <string name="step2">Go to Accessibility</string>
    <string name="step3">Click on Text-to-speech output</string>
    <string name="step4">Click on Install voice data</string>
    <string name="step5">Search for your preferred language, install the voice you like and you are good to go</string>
    <string name="forEveryThing">For everything</string>
    <string name="on">ON</string>
    <string name="Off">OFF</string>
    <string name="recurring">recurring</string>
    <string name="licenses"><u>Licenses</u></string>
    <string name="copyright">\u00a9 Zerostic</string>
    <string name="credits"><u>Credits</u></string>
    <string name="termsncondition">Terms of Service</string>
    <string name="privacyPolicy">Privacy Policy</string>
    <string name="Zerosticlogo">ZerosticLogo</string>
    <string name="gmlogo">gmLogo</string>
    <string name="refundPolicy">Refund Policy</string>
    <string name="license">Open Source Libraries</string>
    <string name="credit">Credits To</string>
    <string name="terms">"<b>Terms of Service</b>\n\nWe know it’s boring and its something no one wants to look at, but it’s important what you can expect from us and what we can expect from you as you use our services.\n\n<b>Thank you for choosing Zerostic.</b>\n\nThis is a license agreement between you and Zerostic. This agreement describes your rights and the conditions upon which you may use Zerostic software’s and services. You should review the entire agreement, including any supplemental license terms that accompany the software and any linked terms, because all the terms are important and together create this agreement that applies to you.\n<b>\nBy accepting this agreement or using our software or service, you agree to all these terms, and consent to the transmission of certain information during account creation and during your use of the software or services. If you do not accept and comply with these terms, you may not use the software or its features.</b>\n\n<b>1) Installation and Use Rights</b>\n\nThe software is licensed, not sold. Under this agreement, we grant you the right to install and run one instance of the software on your device, for use by one person at a time, so long as you comply with all the terms of this agreement. Updating or upgrading from non-genuine software with software from Zerostic or authorized sources does not make your original version or the updated/upgraded version genuine, and in that situation, you do not have a license to use the software.\n<b>\n2) Privacy Consent and Use of Data</b>\n\nYour privacy is important to us. Some of the software features send or receive information when using those features. Many of these features can be switched off in the user interface, or you can choose not to use them. By accepting this agreement and using the software you agree that Zerostic may collect and use the information as described in the Zerostic privacy policy, and as may be described in the user interface associated with the software features.\n\n<b>3) Network and Internet Usage</b>\n\nSome features of the software and services accessed through the software may require your device to access the Internet. Your access and usage (including charges) may be subject to the terms of your cellular or internet provider agreement.\n\n<b>Just few more things\n\nZerostic has the right to update its terms of service and privacy policy in future if Zerostic updates its ToS or Privacy Policy it will inform you in advance and its upon you whether you want to continue using our software’s or services. Zerostic can delete your data or information as well as your account stored in our systems if you do not accept our terms in future, without accepting the terms of service or privacy policy use of any software’s or service provided by Zerostic will be considered illegal.</b>\n\n"</string>
</resources>