<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.WeatherSettingsActivity"
    android:background="@color/background">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/heading"
        android:text="@string/weather"
        android:layout_centerHorizontal="true"
        android:fontFamily="@font/regular"
        android:layout_marginTop="15dp"
        android:textColor="@color/white"
        android:textSize="20sp"/>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/weatherSettingsCard"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/heading"
        app:cardBackgroundColor="@color/cardColor"
        app:cardCornerRadius="20dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginTop="10dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/weatherSettings"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginStart="20dp"
                android:fontFamily="@font/regular"
                android:textColor="@color/white"
                android:layout_centerHorizontal="true"
                android:text="@string/iWantWeather"/>

            <RadioGroup
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/weatherSettings"
                android:layout_margin="10dp">

                <RadioButton
                    android:id="@+id/rb1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/regular"
                    android:textColor="@color/white"
                    android:buttonTint="@color/white"
                    android:text="@string/afterEveryAlarm"/>

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/rb2"
                    android:fontFamily="@font/regular"
                    android:textColor="@color/white"
                    android:buttonTint="@color/white"
                    android:text="@string/onlyForMorningAlarms"/>

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/rb3"
                    android:textColor="@color/white"
                    android:buttonTint="@color/white"
                    android:fontFamily="@font/regular"
                    android:text="@string/never"/>

            </RadioGroup>

        </RelativeLayout>

    </com.google.android.material.card.MaterialCardView>

</RelativeLayout>