<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/background"
    android:layout_height="match_parent"
    tools:context=".Activities.RegisterActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">



    <TextView
        android:id="@+id/heading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:textSize="20sp"
        android:textStyle="bold"
        android:fontFamily="@font/bold"
        android:textColor="@color/white"
        android:layout_alignParentStart="true"
        android:layout_toStartOf="@id/nextBtn"
        android:layout_marginEnd="10dp"/>

    <TextView
        android:id="@+id/nextBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="20dp"
        android:fontFamily="@font/regular"
        android:textColor="@color/colorPrimary"
        android:text="@string/next"
        android:textSize="20sp" />

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/profilePicture"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/heading"
        android:layout_marginTop="20dp"
        android:src="?attr/userIcon"/>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/typeOfSleeper"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardElevation="0dp"
        app:strokeColor="@color/cardStrokeColor"
        app:strokeWidth="0.5dp"
        app:cardCornerRadius="15dp"
        app:cardBackgroundColor="@color/cardColor"
        android:layout_marginEnd="15dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="10dp"
        android:layout_below="@id/profilePicture">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/headingOfType"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginStart="20dp"
                android:fontFamily="@font/regular"
                android:textColor="@color/white"
                android:text="@string/typeOfSleeper"/>

            <RadioGroup
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/headingOfType"
                android:layout_margin="10dp">

                <RadioButton
                    android:id="@+id/rb1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/regular"
                    android:buttonTint="@color/white"
                    android:textColor="@color/white"
                    android:text="@string/proAtSleep"/>

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/rb2"
                    android:fontFamily="@font/regular"
                    android:buttonTint="@color/white"
                    android:textColor="@color/white"
                    android:text="@string/wakeUpAtTimeRarely"/>

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/rb3"
                    android:fontFamily="@font/regular"
                    android:buttonTint="@color/white"
                    android:textColor="@color/white"
                    android:text="@string/wakeUpAtTimeOften"/>

            </RadioGroup>

        </RelativeLayout>

    </com.google.android.material.card.MaterialCardView>


    <com.google.android.material.card.MaterialCardView
        android:id="@+id/voiceSettings"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/typeOfSleeper"
        android:layout_marginTop="10dp"
        app:cardElevation="0dp"
        app:strokeColor="@color/cardStrokeColor"
        app:strokeWidth="0.5dp"
        app:cardCornerRadius="15dp"
        app:cardBackgroundColor="@color/cardColor"
        android:layout_marginEnd="15dp"
        android:layout_marginStart="15dp"
        android:layout_marginBottom="25dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/headingOfVoice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/regular"
                android:layout_marginStart="20dp"
                android:textColor="@color/white"
                android:text="@string/voiceSettings"/>

            <RadioGroup
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/headingOfVoice"
                android:layout_margin="10dp">

                <RadioButton
                    android:id="@+id/rb4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:buttonTint="@color/white"
                    android:fontFamily="@font/regular"
                    android:text="@string/voiceForBoth"/>

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:buttonTint="@color/white"
                    android:id="@+id/rb5"
                    android:fontFamily="@font/regular"
                    android:text="@string/onlyWeather"/>

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/rb6"
                    android:textColor="@color/white"
                    android:buttonTint="@color/white"
                    android:fontFamily="@font/regular"
                    android:text="@string/noVoice"/>

            </RadioGroup>

        </RelativeLayout>

    </com.google.android.material.card.MaterialCardView>

    </RelativeLayout>

</ScrollView>